# mcp-blast-radius

./: .dockerignore  .gitignore  BADGE_CRITERIA.md  Dockerfile  README.md  glama.json  pyproject.toml
.github/ISSUE_TEMPLATE/: badge-application.yml  blast_radius_finding.md
aos_validator_mcp/: __init__.py  _validate_pure.py  blast_radius.py  blast_radius_patterns.json  call_logger.py  gate_cli.py  server.py  validator.py
docs/: GLAMA_BUILD.md
packaging/: LICENSE  README.md  agent_card.json  pyproject.toml
packaging/.mcp/: server.json
packaging/aos_validator_mcp/: __init__.py  _validate_pure.py  blast_radius.py  gate_cli.py  precedents_loader.py  precedents_tools.py  server.py
packaging/precedents/: PREC_DNA-0001.json  __init__.py  index.json
packaging/scripts/: attestation_common.py  forbidden_words_lint.py  smoke_external_fixture.py  smoke_self_call.py  sync_precedents_bundle.py  sync_validate_pure.py  verify_attestation.py
tests/fixtures/external_mcp_divergent/: manifest.json  requirements.txt  server.py
tests/fixtures/external_mcp_good/: manifest.json
tests/fixtures/external_mcp_good/config/: .gitkeep
tests/fixtures/external_mcp_good/docs/reports/: .gitkeep
