[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-blast-radius"
version = "0.2.4"
description = "See what any MCP server can touch — static blast-radius report for every target; manifest optional for divergence detection."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AOS Standard Contributors" }]
keywords = [
  "mcp",
  "blast-radius",
  "static-analysis",
  "supply-chain",
  "agent-security",
  "ci-gate",
  "mcp-server",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/aos-standard/mcp-blast-radius"
Documentation = "https://github.com/aos-standard/mcp-blast-radius#readme"
Repository = "https://github.com/aos-standard/mcp-blast-radius"
Issues = "https://github.com/aos-standard/mcp-blast-radius/issues"
Catalog = "https://raw.githubusercontent.com/aos-standard/catalog/main/catalog.json"
Agent-Card = "https://raw.githubusercontent.com/aos-standard/mcp-blast-radius/main/packaging/agent_card.json"

[project.scripts]
mcp-blast-radius = "aos_validator_mcp.server:main"
mcp-blast-radius-gate = "aos_validator_mcp.gate_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aos_validator_mcp*"]

[tool.setuptools.package-data]
aos_validator_mcp = ["_validate_pure.py", "blast_radius.py", "blast_radius_patterns.json"]
